--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 <body>
 
 <header>
-    <h1>Loja de Carros</h1>
+    <h1>ortiz </h1>
 </header>
 
 <nav>
@@ -81,19 +81,20 @@
 
 <div class="container">
     <div class="car">
-        <img src="carro1.jpg" alt="Carro">
-        <h2>Carro 1</h2>
-        <p>Ano: 2023</p>
-        <p>Preço: R$ 50.000</p>
-        <p>Descrição: Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <img src="https://static.wixstatic.com/media/a43d42_5c79449a0fc943dcbd9c40ad526dbc72~mv2.jpg/v1/fill/w_670,h_432,al_c,q_80,usm_0.66_1.00_0.01,enc_auto/AventadorS2019Verde2mkm_18.jpg" alt="Carro">
+        <h2>Lamborguini </h2>
+        <p>Ano: 2018/2018</p>
+        <p>Preço: R$ 6.500.000</p>
+        <p>Descrição: aventador s lp740-4
+        KM 0</p>
     </div>
 
     <div class="car">
-        <img src="carro2.jpg" alt="Carro">
-        <h2>Carro 2</h2>
-        <p>Ano: 2022</p>
-        <p>Preço: R$ 40.000</p>
-        <p>Descrição: Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <img src="https://static.wixstatic.com/media/a43d42_cc5ca3461c4d411b84ea5b0b84acea6d~mv2.jpg/v1/fill/w_657,h_480,al_c,q_80,usm_0.66_1.00_0.01,enc_auto/AMGTBS2021Laranja400km_15.jpg" alt="Carro">
+        <h2>mercedens bens </h2>
+        <p>Ano: 2021/2021</p>
+        <p>Preço: R$ 5.600.000</p>
+        <p>Descrição: amg gt black series</p>
     </div>
 </div>
 
