--- a/index.html
+++ b/index.html
@@ -96,7 +96,22 @@
         <p>Preço: R$ 5.600.000</p>
         <p>Descrição: amg gt black series</p>
     </div>
-</div>
+    
+    <div class="car">
+        <img src="https://static.wixstatic.com/media/e214af_b8454a29d7944131bfb90bce2b2fab7a~mv2.jpg/v1/fill/w_657,h_480,al_c,q_80,usm_0.66_1.00_0.01,enc_auto/GT3Prata18_18mkm-14.jpg">
+       <h2>porsche gt3
+         <p>ano:2017/2018</p>
+         <p>preço:1.760.000
+    </div>
+    
+    <div class="car">
+        <img src="https://static.wixstatic.com/media/e214af_c4f26c1b43734bc2ae772929e1449e40~mv2.jpg/v1/fill/w_657,h_480,al_c,q_80,usm_0.66_1.00_0.01,enc_auto/Cullinan24Cinza0km.jpg">
+        <h2>rolls-royce </h2>
+        <p>ano:2023/2024</p>
+        <p>preço:6.800.000</p>
+        <p>Descrição: amg gt black series</p>
+    </div>
+
 
 <footer>
     <p>&copy; 2024 Loja de Carros</p>
