--- a/index.html
+++ b/index.html
@@ -111,6 +111,16 @@
         <p>preço:6.800.000</p>
         <p>Descrição: amg gt black series</p>
     </div>
+    
+   <div class="car">
+         <img src="https://static.wixstatic.com/media/e214af_31e6b5a08f5d4a8683ee9b9efb5afe55~mv2.jpg/v1/fill/w_657,h_480,al_c,q_80,usm_0.66_1.00_0.01,enc_auto/Vel0Cinza29mkm-Blind.jpg">
+     
+     <h2>land rover</h2>
+        <p>ano:2019/2020
+        <p>preço:453.000
+        <p>km:0 km
+    </div>
+
 
 
 <footer>
